# anonimize

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  SECURITY.md  SIMPLIFICATION_SUMMARY.md  TODO.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
benchmarks/: test_benchmarks.py
docs/: docker.md  index.md
docs/api/: core.md
docs/development/: architecture.md
docs/examples/: advanced.md  basic.md
docs/getting-started/: installation.md  quickstart.md
examples/: anonymize_csv.py  anonymize_database.py  one_liners.py  quickstart.py  tutorial.ipynb
src/anonimize/: __init__.py  __version__.py  core.py  differential_privacy.py  errors.py  simple.py  utils.py
src/anonimize/anonymizers/: __init__.py  base.py  credit_card.py  csv_anon.py  database.py  email.py  json_anon.py  phone.py  specialized.py  ssn.py
src/anonimize/cli/: __init__.py  __main__.py  wizard.py
src/anonimize/connectors/: __init__.py  base.py  mongodb.py  mysql.py  postgres.py  postgresql.py  sqlite.py
src/anonimize/detectors/: __init__.py  base.py  heuristic.py  regex.py
src/anonimize/formats/: __init__.py  avro.py  base.py  excel.py  handlers.py  parquet.py
src/anonimize/streaming/: __init__.py  processor.py
tests/: __init__.py  test_core.py  test_differential_privacy.py
tests/fixtures/: sample_data.csv
tests/test_anonymizers/: __init__.py  test_csv.py  test_json.py  test_specialized.py
tests/test_connectors/: test_base.py
